--- a/package.json
+++ b/package.json
@@ -1,39 +1,47 @@
 {
-	"name": "stargaze",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"biome": "biome check --write ."
-	},
-	"dependencies": {
-		"@tailwindcss/postcss": "^4.1.11",
-		"babel-plugin-react-compiler": "^19.1.0-rc.2",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"cmdk": "^1.1.1",
-		"lucide-react": "^0.536.0",
-		"next": "15.4.5",
-		"next-themes": "^0.4.6",
-		"nuqs": "^2.4.3",
-		"radix-ui": "^1.4.2",
-		"react": "19.1.1",
-		"react-dom": "19.1.1",
-		"react-hotkeys-hook": "^5.1.0",
-		"react-remove-scroll": "^2.7.1",
-		"tailwind-merge": "^3.3.1",
-		"tw-animate-css": "^1.3.6",
-		"zustand": "^5.0.7"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.1.3",
-		"@types/node": "^24",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"postcss": "^8",
-		"tailwindcss": "^4.1.11",
-		"typescript": "^5"
-	}
+  "name": "stargaze",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "biome": "biome check --write ."
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "lucide-react": "^0.536.0",
+    "next": "15.4.5",
+    "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
+    "radix-ui": "^1.4.2",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-hotkeys-hook": "^5.1.0",
+    "react-remove-scroll": "^2.7.1",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.6",
+    "zustand": "^5.0.7"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.1.2",
+    "@types/node": "^24",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.4",
+    "postcss": "^8",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5",
+    "ultracite": "5.1.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
+      "npx ultracite format"
+    ]
+  }
 }
