--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "biome": "biome check --write ."
+    "format": "ultracite format",
+    "lint": "ultracite lint"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -28,7 +29,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.3",
+    "@biomejs/biome": "2.1.2",
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
